--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prisma:seed": "prisma db seed",
     "prisma:generate": "prisma generate"
   },
-   "prisma": {
-    "seed": "ts-node --transpile-only prisma/seed.ts"
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
@@ -35,19 +35,19 @@
     "react-dom": "19.1.0",
     "react-loading-indicators": "^1.0.1",
     "tailwind-merge": "^3.3.1",
-    "ts-node": "^10.9.2",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5"
+    "typescript": "^5.9.2"
   }
 }
