--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
@@ -37,8 +38,11 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-loading-indicators": "^1.0.1",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2"
+    "use-debounce": "^10.0.6",
+    "vaul": "^1.1.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
