--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "decimal.js": "^10.6.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "prisma": "^6.15.0",
