--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
     "@types/bcrypt": "^6.0.0",
+    "@types/qs": "^6.14.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -36,6 +37,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "prisma": "^6.15.0",
+    "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
