--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.15.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-select": "^2.2.6",
@@ -36,16 +39,21 @@
     "decimal.js": "^10.6.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.0",
+    "next-auth": "^5.0.0-beta.29",
+    "nextjs-toploader": "^3.9.17",
     "prisma": "^6.15.0",
     "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-loading-indicators": "^1.0.1",
     "react-use": "^17.6.0",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "vaul": "^1.1.2",
+    "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
