--- a/package.json
+++ b/package.json
@@ -32,10 +32,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
-    "@types/bcrypt": "^6.0.0",
     "@types/qs": "^6.14.0",
     "axios": "^1.11.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "decimal.js": "^10.6.0",
