--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/qs": "^6.14.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "better-auth": "^1.3.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "decimal.js": "^10.6.0",
